--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月24日 20:09 UTC/GMT +9
+# 2018年5月1日 23:18 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。
 # 找到选项，左滑选择【Replace】，然后【OK】。
@@ -48,7 +48,7 @@ USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
 //支付相关
-USER-AGENT,PassbookUIService*,DIRECT
+USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
@@ -60,10 +60,11 @@ USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
 DOMAIN,api.smoot.apple.com.cn,DIRECT
+DOMAIN,captive.apple.com,DIRECT
 DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
 DOMAIN,smp-device.apple.com,DIRECT
 DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,captive.apple.com,DIRECT
+DOMAIN,sp.itunes.apple.com,DIRECT
 DOMAIN-SUFFIX,ess.apple.com,DIRECT
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
@@ -91,6 +92,9 @@ PROCESS-NAME,Jietu,REJECT
 USER-AGENT,BaiduWallet*,REJECT
 
 # Ads in Video apps
+
+// Douyin
+DOMAIN-SUFFIX,log.snssdk.com,REJECT
 
 // iqiyi
 DOMAIN-SUFFIX,a.ckm.iqiyi.com,REJECT
@@ -1039,7 +1043,6 @@ DOMAIN-SUFFIX,act.qq.com,REJECT
 DOMAIN-SUFFIX,activeqq.3g.qq.com,REJECT
 DOMAIN-SUFFIX,ad.qq.com,REJECT
 DOMAIN-SUFFIX,ad.qun.qq.com,REJECT
-DOMAIN-SUFFIX,adfilter.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,adping.qq.com,REJECT
 DOMAIN-SUFFIX,adpm.app.qq.com,REJECT
 DOMAIN-SUFFIX,adrdir.qq.com,REJECT
@@ -1051,7 +1054,6 @@ DOMAIN-SUFFIX,adshmct.qq.com,REJECT
 DOMAIN-SUFFIX,adshmmsg.qq.com,REJECT
 DOMAIN-SUFFIX,adslvfile.qq.com,REJECT
 DOMAIN-SUFFIX,adslvseed.qq.com,REJECT
-DOMAIN-SUFFIX,adsolution.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,adsqqclick.qq.com,REJECT
 DOMAIN-SUFFIX,adsrich.qq.com,REJECT
 DOMAIN-SUFFIX,adstextview.qq.com,REJECT
@@ -1059,48 +1061,32 @@ DOMAIN-SUFFIX,adsview.qq.com,REJECT
 DOMAIN-SUFFIX,adsview2.qq.com,REJECT
 DOMAIN-SUFFIX,adv.app.qq.com,REJECT
 DOMAIN-SUFFIX,adver.qq.com,REJECT
-DOMAIN-SUFFIX,aeventlog.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,aiseet.aa.atianqi.com,REJECT
 DOMAIN-SUFFIX,analy.qq.com,REJECT
 DOMAIN-SUFFIX,android.rqd.qq.com,REJECT
 DOMAIN-SUFFIX,appsupport.qq.com,REJECT
 DOMAIN-SUFFIX,astat.bugly.qq.com,REJECT
-DOMAIN-SUFFIX,astrategy.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,boss.qzone.qq.com,REJECT
-DOMAIN-SUFFIX,bs.l.qq.com,REJECT
 DOMAIN-SUFFIX,bugreportv2.qq.com,REJECT
-DOMAIN-SUFFIX,c.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,c.gj.qq.com,REJECT
-DOMAIN-SUFFIX,c.l.qq.com,REJECT
-DOMAIN-SUFFIX,c2.l.qq.com,REJECT
 DOMAIN-SUFFIX,ca.gtimg.com,REJECT
-DOMAIN-SUFFIX,canvas.gdt.qq.com,REJECT
-DOMAIN-SUFFIX,cb.l.qq.com,REJECT
-DOMAIN-SUFFIX,cfg.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,cgi.connect.qq.com,REJECT
 DOMAIN-SUFFIX,client.show.qq.com,REJECT
-DOMAIN-SUFFIX,cm.e.qq.com,REJECT
-DOMAIN-SUFFIX,cm.l.qq.com,REJECT
-DOMAIN-SUFFIX,d.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,d3g.qq.com,REJECT
 DOMAIN-SUFFIX,dir.minigame.qq.com,REJECT
 DOMAIN-SUFFIX,download.sj.qq.com,REJECT
 DOMAIN-SUFFIX,dp3.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,etg.qq.com,REJECT
-DOMAIN-SUFFIX,eventlog.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,fm.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.tc.qq.com,REJECT
 DOMAIN-SUFFIX,fw.qq.com,REJECT
 DOMAIN-SUFFIX,game.html5.qq.com,REJECT
-DOMAIN-SUFFIX,gdt.qq.com,REJECT
-DOMAIN-SUFFIX,hm.l.qq.com,REJECT
 DOMAIN-SUFFIX,httpring.qq.com,REJECT
-DOMAIN-SUFFIX,i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,if.mingxing.qq.com,REJECT
-DOMAIN-SUFFIX,imc.l.qq.com,REJECT
 DOMAIN-SUFFIX,img1.sj.qq.com,REJECT
+DOMAIN-SUFFIX,imtt.qq.com,REJECT
 DOMAIN-SUFFIX,ios.bugly.qq.com,REJECT
 DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 DOMAIN-SUFFIX,j.wit.qq.com,REJECT
@@ -1108,19 +1094,11 @@ DOMAIN-SUFFIX,jingjia.qq.com,REJECT
 DOMAIN-SUFFIX,jpush.html5.qq.com,REJECT
 DOMAIN-SUFFIX,jqmt.qq.com,REJECT
 DOMAIN-SUFFIX,jsqmt.qq.com,REJECT
-DOMAIN-SUFFIX,l2.l.qq.com,REJECT
 DOMAIN-SUFFIX,lb.gtimg.com,REJECT
-DOMAIN-SUFFIX,lb.l.qq.com,REJECT
-DOMAIN-SUFFIX,livec.l.qq.com,REJECT
-DOMAIN-SUFFIX,livem.l.qq.com,REJECT
-DOMAIN-SUFFIX,livep.l.qq.com,REJECT
-DOMAIN-SUFFIX,lives.l.qq.com,REJECT
 DOMAIN-SUFFIX,log.tbs.qq.com,REJECT
-DOMAIN-SUFFIX,ls.l.qq.com,REJECT
 DOMAIN-SUFFIX,mapp.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
-DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
@@ -1132,10 +1110,7 @@ DOMAIN-SUFFIX,openapi.guanjia.qq.com,REJECT
 DOMAIN-SUFFIX,oth.eve.mdt.qq.com,REJECT
 DOMAIN-SUFFIX,oth.str.mdt.qq.com,REJECT
 DOMAIN-SUFFIX,oth.update.mdt.qq.com,REJECT
-DOMAIN-SUFFIX,p.l.qq.com,REJECT
 DOMAIN-SUFFIX,p.store.qq.com,REJECT
-DOMAIN-SUFFIX,p2.l.qq.com,REJECT
-DOMAIN-SUFFIX,p3.l.qq.com,REJECT
 DOMAIN-SUFFIX,pagespeed.report.qq.com,REJECT
 DOMAIN-SUFFIX,pgdt.gtimg.cn,REJECT
 DOMAIN-SUFFIX,pinghot.qq.com,REJECT
@@ -1146,25 +1121,18 @@ DOMAIN-SUFFIX,pmir.3g.qq.com,REJECT
 DOMAIN-SUFFIX,pms.mb.qq.com,REJECT
 DOMAIN-SUFFIX,push.qq.com,REJECT
 DOMAIN-SUFFIX,pvstat.html5.qq.com,REJECT
-DOMAIN-SUFFIX,q.i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,qqshow2-item.qq.com,REJECT
 DOMAIN-SUFFIX,qss-client.qq.com,REJECT
 DOMAIN-SUFFIX,recmd.html5.qq.com,REJECT
 DOMAIN-SUFFIX,rh.qq.com,REJECT
 DOMAIN-SUFFIX,rich.qq.com,REJECT
-DOMAIN-SUFFIX,rm.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,rs1.qq.com,REJECT
 DOMAIN-SUFFIX,rs2.qq.com,REJECT
-DOMAIN-SUFFIX,s.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,scdown.qq.com,REJECT
 DOMAIN-SUFFIX,sdk.e.qq.com,REJECT
 DOMAIN-SUFFIX,setting.snswin.qq.com,REJECT
 DOMAIN-SUFFIX,showwxml.qq.com,REJECT
 DOMAIN-SUFFIX,sngmta.qq.com,REJECT
-DOMAIN-SUFFIX,soft.tbs.imtt.qq.com,REJECT
-DOMAIN-SUFFIX,strategy.beacon.qq.com,REJECT
-DOMAIN-SUFFIX,t.gdt.qq.com,REJECT
-DOMAIN-SUFFIX,t.l.qq.com,REJECT
 DOMAIN-SUFFIX,t.sj.qq.com,REJECT
 DOMAIN-SUFFIX,ta.qq.com,REJECT
 DOMAIN-SUFFIX,tajs.qq.com,REJECT
@@ -1175,25 +1143,29 @@ DOMAIN-SUFFIX,tj.video.qq.com,REJECT
 DOMAIN-SUFFIX,tools.3g.qq.com,REJECT
 DOMAIN-SUFFIX,tpush.html5.qq.com,REJECT
 DOMAIN-SUFFIX,trace.qq.com,REJECT
-DOMAIN-SUFFIX,u.l.qq.com,REJECT
 DOMAIN-SUFFIX,union.discuz.qq.com,REJECT
 DOMAIN-SUFFIX,updatecenter.qq.com,REJECT
 DOMAIN-SUFFIX,user1.game.qq.com,REJECT
 DOMAIN-SUFFIX,uu.qq.com,REJECT
-DOMAIN-SUFFIX,v.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,variety.tc.qq.com,REJECT
 DOMAIN-SUFFIX,video.ureport.push.qq.com,REJECT
 DOMAIN-SUFFIX,video.wap.mpush.qq.com,REJECT
 DOMAIN-SUFFIX,vlive.qqvideo.tc.qq.com,REJECT
 DOMAIN-SUFFIX,vmindhls.tc.qq.com,REJECT
 DOMAIN-SUFFIX,vpic.video.qq.com,REJECT
-DOMAIN-SUFFIX,w.l.qq.com,REJECT
 DOMAIN-SUFFIX,wap.mpush.qq.com,REJECT
 DOMAIN-SUFFIX,wb.gtimg.com,REJECT
-DOMAIN-SUFFIX,win.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,ws.sj.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdy.tc.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdy.video.qq.com,REJECT
+
+//URL-REGEX,*\.beacon\.qq\.com,REJECT
+//URL-REGEX,*\.gdt\.qq\.com,REJECT
+//URL-REGEX,*\.l\.qq\.com,REJECT
+
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,gdt.qq.com,REJECT
+DOMAIN-SUFFIX,l.qq.com,REJECT
 
 // Tianya
 DOMAIN-SUFFIX,801.tianya.cn,REJECT
@@ -1619,6 +1591,7 @@ DOMAIN-SUFFIX,5jcom.com.cn,REJECT
 DOMAIN-SUFFIX,5vz3cfs0yd.me,REJECT
 DOMAIN-SUFFIX,5y9nfpes.52pk.com,REJECT
 DOMAIN-SUFFIX,600ad.com,REJECT
+DOMAIN-SUFFIX,626uc.com,REJECT
 DOMAIN-SUFFIX,644446.com,REJECT
 DOMAIN-SUFFIX,654mmm.com,REJECT
 DOMAIN-SUFFIX,6669667.com,REJECT
@@ -2084,6 +2057,7 @@ DOMAIN-SUFFIX,adview.cn,REJECT
 DOMAIN-SUFFIX,advmob.cn,REJECT
 DOMAIN-SUFFIX,adwhirl.com,REJECT
 DOMAIN-SUFFIX,adwo.com,REJECT
+DOMAIN-SUFFIX,adx.88shu.cn,REJECT
 DOMAIN-SUFFIX,adx.ads.oppomobile.com,REJECT
 DOMAIN-SUFFIX,adx.kat.ph,REJECT
 DOMAIN-SUFFIX,adx.pro.cn,REJECT
@@ -3524,6 +3498,7 @@ DOMAIN-SUFFIX,jsm.9939.com,REJECT
 DOMAIN-SUFFIX,jsmwd.com,REJECT
 DOMAIN-SUFFIX,jspg.cc,REJECT
 DOMAIN-SUFFIX,jssd.uumeitu.com,REJECT
+DOMAIN-SUFFIX,jt.yunxiufang.net,REJECT
 DOMAIN-SUFFIX,jtxh.net,REJECT
 DOMAIN-SUFFIX,jtys8.com,REJECT
 DOMAIN-SUFFIX,ju33.com,REJECT
@@ -5890,9 +5865,6 @@ IP-CIDR,203.174.77.0/24,DIRECT,no-resolve
 IP-CIDR,109.239.140.0/24,DIRECT,no-resolve
 IP-CIDR,149.154.160.0/20,DIRECT,no-resolve
 IP-CIDR,91.108.4.0/16,DIRECT,no-resolve
-IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
-IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
-IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
 
 // Kakao Talk
 IP-CIDR,1.201.0.0/24,DIRECT,no-resolve
@@ -5967,7 +5939,7 @@ DOMAIN-SUFFIX,alipay.com,PROXY
 DOMAIN-SUFFIX,alipayobjects.com,PROXY
 DOMAIN-SUFFIX,aliyun.com,PROXY
 DOMAIN-SUFFIX,amap.com,PROXY
-DOMAIN-SUFFIX,analytics.126.net,PROXY
+DOMAIN-SUFFIX,aweme.snssdk.com,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
 DOMAIN-SUFFIX,api.crisp.chat,PROXY
 DOMAIN-SUFFIX,appstore.com,PROXY
