--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5915,6 +5915,7 @@ DOMAIN-SUFFIX,didistatic.com,PROXY
 DOMAIN-SUFFIX,hiwifi.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
+DOMAIN-SUFFIX,weixin.qq.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,PROXY
 
 DOMAIN-SUFFIX,12306.com,PROXY
