--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年5月1日 23:18 UTC/GMT +9
+# 2018年5月1日 23:52 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。
 # 找到选项，左滑选择【Replace】，然后【OK】。
@@ -5905,6 +5905,7 @@ USER-AGENT,WeChat*,PROXY
 
 # PROXY
 
+DOMAIN-KEYWORD,weixin.qq,DIRECT
 DOMAIN-SUFFIX,10010.com,PROXY
 DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,189.cn,PROXY
@@ -5915,7 +5916,6 @@ DOMAIN-SUFFIX,didistatic.com,PROXY
 DOMAIN-SUFFIX,hiwifi.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
-DOMAIN-SUFFIX,weixin.qq.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,PROXY
 
 DOMAIN-SUFFIX,12306.com,PROXY
