--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5905,7 +5905,7 @@ USER-AGENT,WeChat*,PROXY
 
 # PROXY
 
-DOMAIN-KEYWORD,weixin.qq,DIRECT
+DOMAIN-KEYWORD,weixin.qq,PROXY
 DOMAIN-SUFFIX,10010.com,PROXY
 DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,189.cn,PROXY
