--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5795,6 +5795,7 @@ DOMAIN-SUFFIX,vzw.com,DIRECT
 DOMAIN-SUFFIX,w.org,DIRECT
 DOMAIN-SUFFIX,w3schools.com,DIRECT
 DOMAIN-SUFFIX,wattpad.com,DIRECT
+DOMAIN-SUFFIX,weather.com,DIRECT
 DOMAIN-SUFFIX,web2project.net,DIRECT
 DOMAIN-SUFFIX,webfreer.com,DIRECT
 DOMAIN-SUFFIX,weblagu.com,DIRECT
@@ -5904,8 +5905,6 @@ USER-AGENT,WeChat*,PROXY
 
 
 # PROXY
-
-DOMAIN-KEYWORD,weixin.qq,PROXY
 DOMAIN-SUFFIX,10010.com,PROXY
 DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,189.cn,PROXY
@@ -6099,7 +6098,6 @@ DOMAIN-SUFFIX,v2ex.com,PROXY
 DOMAIN-SUFFIX,vultr.com,PROXY
 DOMAIN-SUFFIX,wandoujia.com,PROXY
 DOMAIN-SUFFIX,weather.bjango.com,PROXY
-DOMAIN-SUFFIX,weather.com,PROXY
 DOMAIN-SUFFIX,weibo.cn,PROXY
 DOMAIN-SUFFIX,weibo.com,PROXY
 DOMAIN-SUFFIX,weico.cc,PROXY
