--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年5月1日 23:52 UTC/GMT +9
+# 2018年5月5日 13:39 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。
 # 找到选项，左滑选择【Replace】，然后【OK】。
@@ -696,17 +696,20 @@ URL-REGEX,api\d\.tuisong\.baidu\.com,REJECT
 URL-REGEX,sa\d\.tuisong\.baidu\.com,REJECT
 
 // Book
+DOMAIN-SUFFIX,1uandun.com,REJECT
 DOMAIN-SUFFIX,70e.com,REJECT
 DOMAIN-SUFFIX,ad.zhangyue.com,REJECT
 DOMAIN-SUFFIX,adm.easou.com,REJECT
 DOMAIN-SUFFIX,aishowbger.com,REJECT
 DOMAIN-SUFFIX,assets.easou.com,REJECT
+DOMAIN-SUFFIX,bbcoe.cn,REJECT
 DOMAIN-SUFFIX,cj.qidian.com,REJECT
 DOMAIN-SUFFIX,dkeyn.com,REJECT
 DOMAIN-SUFFIX,drdwy.com,REJECT
 DOMAIN-SUFFIX,e.aa985.cn,REJECT
 DOMAIN-SUFFIX,e.v02u9.cn,REJECT
 DOMAIN-SUFFIX,e701.net,REJECT
+DOMAIN-SUFFIX,ehxyz.com,REJECT
 DOMAIN-SUFFIX,ethod.gzgmjcx.com,REJECT
 DOMAIN-SUFFIX,focuscat.com,REJECT
 DOMAIN-SUFFIX,game.qidian.com,REJECT
@@ -715,10 +718,12 @@ DOMAIN-SUFFIX,jyd.fjzdmy.com,REJECT
 DOMAIN-SUFFIX,m.ourlj.com,REJECT
 DOMAIN-SUFFIX,m.txtxr.com,REJECT
 DOMAIN-SUFFIX,m.vsxet.com,REJECT
+DOMAIN-SUFFIX,miam4.cn,REJECT
 DOMAIN-SUFFIX,o.if.qidian.com,REJECT
 DOMAIN-SUFFIX,p.vq6nsu.cn,REJECT
 DOMAIN-SUFFIX,picture.duokan.com,REJECT
 DOMAIN-SUFFIX,push.zhangyue.com,REJECT
+DOMAIN-SUFFIX,pyerc.com,REJECT
 DOMAIN-SUFFIX,s1.cmfu.com,REJECT
 DOMAIN-SUFFIX,sanya1.com,REJECT
 DOMAIN-SUFFIX,sc.shayugg.com,REJECT
@@ -730,6 +735,7 @@ DOMAIN-SUFFIX,ut2.shuqistat.com,REJECT
 DOMAIN-SUFFIX,xgcsr.com,REJECT
 DOMAIN-SUFFIX,xjq.jxmqkj.com,REJECT
 DOMAIN-SUFFIX,xpe.cxaerp.com,REJECT
+DOMAIN-SUFFIX,xtzxmy.com,REJECT
 DOMAIN-SUFFIX,xyrkl.com,REJECT
 DOMAIN-SUFFIX,zhuanfakong.com,REJECT
 
@@ -3926,8 +3932,6 @@ DOMAIN-SUFFIX,npdaqy6x1j.me,REJECT
 DOMAIN-SUFFIX,nr1234.com,REJECT
 DOMAIN-SUFFIX,nsnmiaomu.cn,REJECT
 DOMAIN-SUFFIX,ntalker.com,REJECT
-DOMAIN-SUFFIX,ntdtv.com,REJECT
-DOMAIN-SUFFIX,ntdtv.org,REJECT
 DOMAIN-SUFFIX,nterbx.com,REJECT
 DOMAIN-SUFFIX,nthyn.com,REJECT
 DOMAIN-SUFFIX,nwwap.com,REJECT
