--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,4 +1,4 @@
-# 2018年4月24日 20:00 UTC/GMT +9
+# 2018年5月5日 14:12 UTC/GMT +9
 
 [General]
 bypass-system = true
@@ -53,6 +53,9 @@ IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 
 # Ads in Video apps
 
+// Douyin
+DOMAIN-SUFFIX,log.snssdk.com,REJECT
+
 // iqiyi
 DOMAIN-SUFFIX,a.ckm.iqiyi.com,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -71,6 +74,8 @@ DOMAIN-SUFFIX,msg2.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msga.cupid.iqiyi.com,REJECT
 DOMAIN-SUFFIX,policy.video.iqiyi.com,REJECT
 DOMAIN-SUFFIX,yuedu.iqiyi.com,REJECT
+
+URL-REGEX,^https?://.+/videos/other/.+,REJECT
 
 // Hunan TV
 DOMAIN-SUFFIX,click.hunantv.com,REJECT
@@ -664,21 +669,24 @@ DOMAIN-SUFFIX,wm.baidu.com,REJECT
 DOMAIN-SUFFIX,wn.pos.baidu.com,REJECT
 DOMAIN-SUFFIX,znsv.baidu.com,REJECT
 
-URL-REGEX,api\d\.tuisong\.baidu\.com,REJECT
-URL-REGEX,sa\d\.tuisong\.baidu\.com,REJECT
+URL-REGEX,^https?://api\d\.tuisong\.baidu\.com,REJECT
+URL-REGEX,^https?://sa\d\.tuisong\.baidu\.com,REJECT
 
 // Book
+DOMAIN-SUFFIX,1uandun.com,REJECT
 DOMAIN-SUFFIX,70e.com,REJECT
 DOMAIN-SUFFIX,ad.zhangyue.com,REJECT
 DOMAIN-SUFFIX,adm.easou.com,REJECT
 DOMAIN-SUFFIX,aishowbger.com,REJECT
 DOMAIN-SUFFIX,assets.easou.com,REJECT
+DOMAIN-SUFFIX,bbcoe.cn,REJECT
 DOMAIN-SUFFIX,cj.qidian.com,REJECT
 DOMAIN-SUFFIX,dkeyn.com,REJECT
 DOMAIN-SUFFIX,drdwy.com,REJECT
 DOMAIN-SUFFIX,e.aa985.cn,REJECT
 DOMAIN-SUFFIX,e.v02u9.cn,REJECT
 DOMAIN-SUFFIX,e701.net,REJECT
+DOMAIN-SUFFIX,ehxyz.com,REJECT
 DOMAIN-SUFFIX,ethod.gzgmjcx.com,REJECT
 DOMAIN-SUFFIX,focuscat.com,REJECT
 DOMAIN-SUFFIX,game.qidian.com,REJECT
@@ -687,10 +695,12 @@ DOMAIN-SUFFIX,jyd.fjzdmy.com,REJECT
 DOMAIN-SUFFIX,m.ourlj.com,REJECT
 DOMAIN-SUFFIX,m.txtxr.com,REJECT
 DOMAIN-SUFFIX,m.vsxet.com,REJECT
+DOMAIN-SUFFIX,miam4.cn,REJECT
 DOMAIN-SUFFIX,o.if.qidian.com,REJECT
 DOMAIN-SUFFIX,p.vq6nsu.cn,REJECT
 DOMAIN-SUFFIX,picture.duokan.com,REJECT
 DOMAIN-SUFFIX,push.zhangyue.com,REJECT
+DOMAIN-SUFFIX,pyerc.com,REJECT
 DOMAIN-SUFFIX,s1.cmfu.com,REJECT
 DOMAIN-SUFFIX,sanya1.com,REJECT
 DOMAIN-SUFFIX,sc.shayugg.com,REJECT
@@ -702,6 +712,7 @@ DOMAIN-SUFFIX,ut2.shuqistat.com,REJECT
 DOMAIN-SUFFIX,xgcsr.com,REJECT
 DOMAIN-SUFFIX,xjq.jxmqkj.com,REJECT
 DOMAIN-SUFFIX,xpe.cxaerp.com,REJECT
+DOMAIN-SUFFIX,xtzxmy.com,REJECT
 DOMAIN-SUFFIX,xyrkl.com,REJECT
 DOMAIN-SUFFIX,zhuanfakong.com,REJECT
 
@@ -873,8 +884,8 @@ DOMAIN-SUFFIX,jebe.renren.com,REJECT
 DOMAIN-SUFFIX,jebe.xnimg.cn,REJECT
 
 // Sendanywhere
-URL-REGEX,http:\/\/notice\.send-anywhere\.com\/banner,REJECT
-URL-REGEX,http:\/\/\w+\.cloudfront\.net\/banner,REJECT
+URL-REGEX,^https?://notice\.send-anywhere\.com\/banner,REJECT
+URL-REGEX,^https?://\w+\.cloudfront\.net\/banner,REJECT
 
 // Sina
 DOMAIN-SUFFIX,2016.sina.cn,REJECT
@@ -961,12 +972,11 @@ DOMAIN-SUFFIX,woocall.sina.com.cn,REJECT
 DOMAIN-SUFFIX,zc.biz.weibo.com,REJECT
 DOMAIN-SUFFIX,zymo.mps.weibo.com,REJECT
 
-
-URL-REGEX,ad\d\.sina\.com,REJECT
-URL-REGEX,ad\d\.sina\.com.cn,REJECT
-URL-REGEX,d\d\.sina\.com\.cn,REJECT
-URL-REGEX,d\d\.sinaimg\.cn,REJECT
-URL-REGEX,sax\d\.sina\.com\.cn,REJECT
+URL-REGEX,^https?://ad\d\.sina\.com,REJECT
+URL-REGEX,^https?://ad\d\.sina\.com.cn,REJECT
+URL-REGEX,^https?://d\d\.sina\.com\.cn,REJECT
+URL-REGEX,^https?://d\d\.sinaimg\.cn,REJECT
+URL-REGEX,^https?://sax\d\.sina\.com\.cn,REJECT
 
 // Sogou
 DOMAIN-SUFFIX,123.sogou.com,REJECT
@@ -1015,7 +1025,6 @@ DOMAIN-SUFFIX,act.qq.com,REJECT
 DOMAIN-SUFFIX,activeqq.3g.qq.com,REJECT
 DOMAIN-SUFFIX,ad.qq.com,REJECT
 DOMAIN-SUFFIX,ad.qun.qq.com,REJECT
-DOMAIN-SUFFIX,adfilter.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,adping.qq.com,REJECT
 DOMAIN-SUFFIX,adpm.app.qq.com,REJECT
 DOMAIN-SUFFIX,adrdir.qq.com,REJECT
@@ -1027,7 +1036,6 @@ DOMAIN-SUFFIX,adshmct.qq.com,REJECT
 DOMAIN-SUFFIX,adshmmsg.qq.com,REJECT
 DOMAIN-SUFFIX,adslvfile.qq.com,REJECT
 DOMAIN-SUFFIX,adslvseed.qq.com,REJECT
-DOMAIN-SUFFIX,adsolution.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,adsqqclick.qq.com,REJECT
 DOMAIN-SUFFIX,adsrich.qq.com,REJECT
 DOMAIN-SUFFIX,adstextview.qq.com,REJECT
@@ -1035,48 +1043,32 @@ DOMAIN-SUFFIX,adsview.qq.com,REJECT
 DOMAIN-SUFFIX,adsview2.qq.com,REJECT
 DOMAIN-SUFFIX,adv.app.qq.com,REJECT
 DOMAIN-SUFFIX,adver.qq.com,REJECT
-DOMAIN-SUFFIX,aeventlog.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,aiseet.aa.atianqi.com,REJECT
 DOMAIN-SUFFIX,analy.qq.com,REJECT
 DOMAIN-SUFFIX,android.rqd.qq.com,REJECT
 DOMAIN-SUFFIX,appsupport.qq.com,REJECT
 DOMAIN-SUFFIX,astat.bugly.qq.com,REJECT
-DOMAIN-SUFFIX,astrategy.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,boss.qzone.qq.com,REJECT
-DOMAIN-SUFFIX,bs.l.qq.com,REJECT
 DOMAIN-SUFFIX,bugreportv2.qq.com,REJECT
-DOMAIN-SUFFIX,c.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,c.gj.qq.com,REJECT
-DOMAIN-SUFFIX,c.l.qq.com,REJECT
-DOMAIN-SUFFIX,c2.l.qq.com,REJECT
 DOMAIN-SUFFIX,ca.gtimg.com,REJECT
-DOMAIN-SUFFIX,canvas.gdt.qq.com,REJECT
-DOMAIN-SUFFIX,cb.l.qq.com,REJECT
-DOMAIN-SUFFIX,cfg.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,cgi.connect.qq.com,REJECT
 DOMAIN-SUFFIX,client.show.qq.com,REJECT
-DOMAIN-SUFFIX,cm.e.qq.com,REJECT
-DOMAIN-SUFFIX,cm.l.qq.com,REJECT
-DOMAIN-SUFFIX,d.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,d3g.qq.com,REJECT
 DOMAIN-SUFFIX,dir.minigame.qq.com,REJECT
 DOMAIN-SUFFIX,download.sj.qq.com,REJECT
 DOMAIN-SUFFIX,dp3.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,etg.qq.com,REJECT
-DOMAIN-SUFFIX,eventlog.beacon.qq.com,REJECT
 DOMAIN-SUFFIX,fm.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.tc.qq.com,REJECT
 DOMAIN-SUFFIX,fw.qq.com,REJECT
 DOMAIN-SUFFIX,game.html5.qq.com,REJECT
-DOMAIN-SUFFIX,gdt.qq.com,REJECT
-DOMAIN-SUFFIX,hm.l.qq.com,REJECT
 DOMAIN-SUFFIX,httpring.qq.com,REJECT
-DOMAIN-SUFFIX,i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,if.mingxing.qq.com,REJECT
-DOMAIN-SUFFIX,imc.l.qq.com,REJECT
 DOMAIN-SUFFIX,img1.sj.qq.com,REJECT
+DOMAIN-SUFFIX,imtt.qq.com,REJECT
 DOMAIN-SUFFIX,ios.bugly.qq.com,REJECT
 DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 DOMAIN-SUFFIX,j.wit.qq.com,REJECT
@@ -1084,19 +1076,11 @@ DOMAIN-SUFFIX,jingjia.qq.com,REJECT
 DOMAIN-SUFFIX,jpush.html5.qq.com,REJECT
 DOMAIN-SUFFIX,jqmt.qq.com,REJECT
 DOMAIN-SUFFIX,jsqmt.qq.com,REJECT
-DOMAIN-SUFFIX,l2.l.qq.com,REJECT
 DOMAIN-SUFFIX,lb.gtimg.com,REJECT
-DOMAIN-SUFFIX,lb.l.qq.com,REJECT
-DOMAIN-SUFFIX,livec.l.qq.com,REJECT
-DOMAIN-SUFFIX,livem.l.qq.com,REJECT
-DOMAIN-SUFFIX,livep.l.qq.com,REJECT
-DOMAIN-SUFFIX,lives.l.qq.com,REJECT
 DOMAIN-SUFFIX,log.tbs.qq.com,REJECT
-DOMAIN-SUFFIX,ls.l.qq.com,REJECT
 DOMAIN-SUFFIX,mapp.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
-DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
@@ -1108,10 +1092,7 @@ DOMAIN-SUFFIX,openapi.guanjia.qq.com,REJECT
 DOMAIN-SUFFIX,oth.eve.mdt.qq.com,REJECT
 DOMAIN-SUFFIX,oth.str.mdt.qq.com,REJECT
 DOMAIN-SUFFIX,oth.update.mdt.qq.com,REJECT
-DOMAIN-SUFFIX,p.l.qq.com,REJECT
 DOMAIN-SUFFIX,p.store.qq.com,REJECT
-DOMAIN-SUFFIX,p2.l.qq.com,REJECT
-DOMAIN-SUFFIX,p3.l.qq.com,REJECT
 DOMAIN-SUFFIX,pagespeed.report.qq.com,REJECT
 DOMAIN-SUFFIX,pgdt.gtimg.cn,REJECT
 DOMAIN-SUFFIX,pinghot.qq.com,REJECT
@@ -1122,25 +1103,18 @@ DOMAIN-SUFFIX,pmir.3g.qq.com,REJECT
 DOMAIN-SUFFIX,pms.mb.qq.com,REJECT
 DOMAIN-SUFFIX,push.qq.com,REJECT
 DOMAIN-SUFFIX,pvstat.html5.qq.com,REJECT
-DOMAIN-SUFFIX,q.i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,qqshow2-item.qq.com,REJECT
 DOMAIN-SUFFIX,qss-client.qq.com,REJECT
 DOMAIN-SUFFIX,recmd.html5.qq.com,REJECT
 DOMAIN-SUFFIX,rh.qq.com,REJECT
 DOMAIN-SUFFIX,rich.qq.com,REJECT
-DOMAIN-SUFFIX,rm.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,rs1.qq.com,REJECT
 DOMAIN-SUFFIX,rs2.qq.com,REJECT
-DOMAIN-SUFFIX,s.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,scdown.qq.com,REJECT
 DOMAIN-SUFFIX,sdk.e.qq.com,REJECT
 DOMAIN-SUFFIX,setting.snswin.qq.com,REJECT
 DOMAIN-SUFFIX,showwxml.qq.com,REJECT
 DOMAIN-SUFFIX,sngmta.qq.com,REJECT
-DOMAIN-SUFFIX,soft.tbs.imtt.qq.com,REJECT
-DOMAIN-SUFFIX,strategy.beacon.qq.com,REJECT
-DOMAIN-SUFFIX,t.gdt.qq.com,REJECT
-DOMAIN-SUFFIX,t.l.qq.com,REJECT
 DOMAIN-SUFFIX,t.sj.qq.com,REJECT
 DOMAIN-SUFFIX,ta.qq.com,REJECT
 DOMAIN-SUFFIX,tajs.qq.com,REJECT
@@ -1151,25 +1125,25 @@ DOMAIN-SUFFIX,tj.video.qq.com,REJECT
 DOMAIN-SUFFIX,tools.3g.qq.com,REJECT
 DOMAIN-SUFFIX,tpush.html5.qq.com,REJECT
 DOMAIN-SUFFIX,trace.qq.com,REJECT
-DOMAIN-SUFFIX,u.l.qq.com,REJECT
 DOMAIN-SUFFIX,union.discuz.qq.com,REJECT
 DOMAIN-SUFFIX,updatecenter.qq.com,REJECT
 DOMAIN-SUFFIX,user1.game.qq.com,REJECT
 DOMAIN-SUFFIX,uu.qq.com,REJECT
-DOMAIN-SUFFIX,v.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,variety.tc.qq.com,REJECT
 DOMAIN-SUFFIX,video.ureport.push.qq.com,REJECT
 DOMAIN-SUFFIX,video.wap.mpush.qq.com,REJECT
 DOMAIN-SUFFIX,vlive.qqvideo.tc.qq.com,REJECT
 DOMAIN-SUFFIX,vmindhls.tc.qq.com,REJECT
 DOMAIN-SUFFIX,vpic.video.qq.com,REJECT
-DOMAIN-SUFFIX,w.l.qq.com,REJECT
 DOMAIN-SUFFIX,wap.mpush.qq.com,REJECT
 DOMAIN-SUFFIX,wb.gtimg.com,REJECT
-DOMAIN-SUFFIX,win.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,ws.sj.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdy.tc.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdy.video.qq.com,REJECT
+
+URL-REGEX,^https?://.+\.beacon\.qq\.com,REJECT
+URL-REGEX,^https?://.+\.gdt\.qq\.com,REJECT
+URL-REGEX,^https?://.+\.l\.qq\.com,REJECT
 
 // Tianya
 DOMAIN-SUFFIX,801.tianya.cn,REJECT
@@ -1595,6 +1569,7 @@ DOMAIN-SUFFIX,5jcom.com.cn,REJECT
 DOMAIN-SUFFIX,5vz3cfs0yd.me,REJECT
 DOMAIN-SUFFIX,5y9nfpes.52pk.com,REJECT
 DOMAIN-SUFFIX,600ad.com,REJECT
+DOMAIN-SUFFIX,626uc.com,REJECT
 DOMAIN-SUFFIX,644446.com,REJECT
 DOMAIN-SUFFIX,654mmm.com,REJECT
 DOMAIN-SUFFIX,6669667.com,REJECT
@@ -2060,6 +2035,7 @@ DOMAIN-SUFFIX,adview.cn,REJECT
 DOMAIN-SUFFIX,advmob.cn,REJECT
 DOMAIN-SUFFIX,adwhirl.com,REJECT
 DOMAIN-SUFFIX,adwo.com,REJECT
+DOMAIN-SUFFIX,adx.88shu.cn,REJECT
 DOMAIN-SUFFIX,adx.ads.oppomobile.com,REJECT
 DOMAIN-SUFFIX,adx.kat.ph,REJECT
 DOMAIN-SUFFIX,adx.pro.cn,REJECT
@@ -3500,6 +3476,7 @@ DOMAIN-SUFFIX,jsm.9939.com,REJECT
 DOMAIN-SUFFIX,jsmwd.com,REJECT
 DOMAIN-SUFFIX,jspg.cc,REJECT
 DOMAIN-SUFFIX,jssd.uumeitu.com,REJECT
+DOMAIN-SUFFIX,jt.yunxiufang.net,REJECT
 DOMAIN-SUFFIX,jtxh.net,REJECT
 DOMAIN-SUFFIX,jtys8.com,REJECT
 DOMAIN-SUFFIX,ju33.com,REJECT
@@ -3927,8 +3904,6 @@ DOMAIN-SUFFIX,npdaqy6x1j.me,REJECT
 DOMAIN-SUFFIX,nr1234.com,REJECT
 DOMAIN-SUFFIX,nsnmiaomu.cn,REJECT
 DOMAIN-SUFFIX,ntalker.com,REJECT
-DOMAIN-SUFFIX,ntdtv.com,REJECT
-DOMAIN-SUFFIX,ntdtv.org,REJECT
 DOMAIN-SUFFIX,nterbx.com,REJECT
 DOMAIN-SUFFIX,nthyn.com,REJECT
 DOMAIN-SUFFIX,nwwap.com,REJECT
@@ -5196,7 +5171,6 @@ IP-CIDR,106.75.65.90/32,REJECT,no-resolve
 IP-CIDR,107.21.113.76/32,REJECT,no-resolve
 IP-CIDR,108.171.248.234/32,REJECT,no-resolve
 IP-CIDR,111.175.220.160/29,REJECT,no-resolve
-IP-CIDR,111.206.13.60/24,REJECT,no-resolve
 IP-CIDR,111.206.22.0/24,REJECT,no-resolve
 IP-CIDR,111.30.135.167/32,REJECT,no-resolve
 IP-CIDR,111.63.135.0/24,REJECT,no-resolve
@@ -5212,6 +5186,7 @@ IP-CIDR,115.29.141.121/32,REJECT,no-resolve
 IP-CIDR,115.29.247.48/32,REJECT,no-resolve
 IP-CIDR,116.206.22.7/32,REJECT,no-resolve
 IP-CIDR,116.55.227.242/32,REJECT,no-resolve
+IP-CIDR,117.144.242.32/32,REJECT,no-resolve
 IP-CIDR,117.25.133.209/32,REJECT,no-resolve
 IP-CIDR,118.144.88.215/28,REJECT,no-resolve
 IP-CIDR,119.188.13.0/24,REJECT,no-resolve
@@ -5313,7 +5288,9 @@ IP-CIDR,69.28.57.245/32,REJECT,no-resolve
 IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
-
+IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
+IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
+IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
 
 
 # DIRECT
@@ -5335,6 +5312,7 @@ PROCESS-NAME,Twitterrific,DIRECT
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,DIRECT
 USER-AGENT,*Telegram*,DIRECT
 USER-AGENT,Argo*,DIRECT
+USER-AGENT,AwemeI18n*,DIRECT
 USER-AGENT,Coinbase*,DIRECT
 USER-AGENT,com.google.ios.youtube*,DIRECT
 USER-AGENT,Instagram*,DIRECT
@@ -5344,10 +5322,6 @@ USER-AGENT,SoundCloud*,DIRECT
 USER-AGENT,WeMusic*,DIRECT
 USER-AGENT,WhatsApp*,DIRECT
 USER-AGENT,YouTube*,DIRECT
-
-// Area
-URL-REGEX,*\.jp,DIRECT
-URL-REGEX,*\.tw,DIRECT
 
 // BBC
 USER-AGENT,BBCiPlayer*,DIRECT
@@ -5450,6 +5424,7 @@ DOMAIN-SUFFIX,angularjs.org,DIRECT
 DOMAIN-SUFFIX,anthonycalzadilla.com,DIRECT
 DOMAIN-SUFFIX,aol.com,DIRECT
 DOMAIN-SUFFIX,aolcdn.com,DIRECT
+DOMAIN-SUFFIX,api.tiktokv.com,DIRECT
 DOMAIN-SUFFIX,api.urbandictionary.com,DIRECT
 DOMAIN-SUFFIX,apigee.com,DIRECT
 DOMAIN-SUFFIX,apk-dl.com,DIRECT
@@ -6058,10 +6033,10 @@ IP-CIDR,203.174.77.0/24,DIRECT,no-resolve
 // Telegram
 IP-CIDR,109.239.140.0/24,DIRECT,no-resolve
 IP-CIDR,149.154.160.0/20,DIRECT,no-resolve
-IP-CIDR,91.108.4.0/16,DIRECT,no-resolve
-IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
-IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
-IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
+IP-CIDR,149.154.164.0/22,PROXY,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 
 // Kakao Talk
 IP-CIDR,1.201.0.0/24,DIRECT,no-resolve
@@ -6172,7 +6147,7 @@ DOMAIN-SUFFIX,alipay.com,PROXY
 DOMAIN-SUFFIX,alipayobjects.com,PROXY
 DOMAIN-SUFFIX,aliyun.com,PROXY
 DOMAIN-SUFFIX,amap.com,PROXY
-DOMAIN-SUFFIX,analytics.126.net,PROXY
+DOMAIN-SUFFIX,aweme.snssdk.com,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
 DOMAIN-SUFFIX,api.crisp.chat,PROXY
 DOMAIN-SUFFIX,appshike.com,PROXY
@@ -6195,6 +6170,7 @@ DOMAIN-SUFFIX,chunbo.com,PROXY
 DOMAIN-SUFFIX,chunboimg.com,PROXY
 DOMAIN-SUFFIX,clashroyaleapp.com,PROXY
 DOMAIN-SUFFIX,clouddn.com,PROXY
+DOMAIN-SUFFIX,cloudsigma.com,PROXY
 DOMAIN-SUFFIX,cloudxns.net,PROXY
 DOMAIN-SUFFIX,cmfu.com,PROXY
 DOMAIN-SUFFIX,cnbeta.com,PROXY
@@ -6237,6 +6213,7 @@ DOMAIN-SUFFIX,iciba.com,PROXY
 DOMAIN-SUFFIX,icloud.com,PROXY
 DOMAIN-SUFFIX,ifeng.com,PROXY
 DOMAIN-SUFFIX,ifengimg.com,PROXY
+DOMAIN-SUFFIX,images.unsplash.com,PROXY
 DOMAIN-SUFFIX,images-amazon.com,PROXY
 DOMAIN-SUFFIX,ipip.net,PROXY
 DOMAIN-SUFFIX,iqiyi.com,PROXY
@@ -6275,6 +6252,7 @@ DOMAIN-SUFFIX,mxhichina.com,PROXY
 DOMAIN-SUFFIX,myqcloud.com,PROXY
 DOMAIN-SUFFIX,myunlu.com,PROXY
 DOMAIN-SUFFIX,netease.com,PROXY
+DOMAIN-SUFFIX,nfoservers.com,PROXY
 DOMAIN-SUFFIX,nssurge.com,PROXY
 DOMAIN-SUFFIX,nuomi.com,PROXY
 DOMAIN-SUFFIX,ourdvs.com,PROXY
@@ -6326,6 +6304,7 @@ DOMAIN-SUFFIX,teamviewer.com,PROXY
 DOMAIN-SUFFIX,tenpay.com,PROXY
 DOMAIN-SUFFIX,tietuku.com,PROXY
 DOMAIN-SUFFIX,tmall.com,PROXY
+DOMAIN-SUFFIX,tmzvps.com,PROXY
 DOMAIN-SUFFIX,trello.com,PROXY
 DOMAIN-SUFFIX,trellocdn.com,PROXY
 DOMAIN-SUFFIX,ttmeiju.com,PROXY
@@ -6348,7 +6327,6 @@ DOMAIN-SUFFIX,weiphone.com,PROXY
 DOMAIN-SUFFIX,weiphone.net,PROXY
 DOMAIN-SUFFIX,windowsupdate.com,PROXY
 DOMAIN-SUFFIX,workflowy.com,PROXY
-DOMAIN-SUFFIX,xbiquge.cc,PROXY
 DOMAIN-SUFFIX,xdrig.com,PROXY
 DOMAIN-SUFFIX,xiami.com,PROXY
 DOMAIN-SUFFIX,xiami.net,PROXY
@@ -6527,6 +6505,7 @@ syria.sy = 127.0.0.1
 // Zhihu
 ^https?://api.zhihu.com/launch - reject
 ^https?://api.zhihu.com/real_time_launch - reject
+^https?://www.zhihu.com/terms/privacy/confirm - reject
 
 // ZhuiShu
 ^https?://api.zhuishushenqi.com/advert - reject
@@ -6541,8 +6520,8 @@ syria.sy = 127.0.0.1
 // IQIYI
 ^https?://.+/cdn/qiyiapp/\d{8}/.+&dis_dz= - reject
 ^https?://.+/cdn/qiyiapp/\d{8}/.+&z=\w - reject
-^https?://.+/videos/other/.+\.(mp4|f4v) - reject
-^https?://data.video.qiyi.com/videos/other/ - reject
+^https?://.+/videos/other/ - reject
+^https?://iface2.iqiyi.com/fusion/3.0/fusion_switch - reject
 
 // ChinaRailcom
 ^https?://211.98.70.226:8080/ - reject
@@ -6580,6 +6559,8 @@ syria.sy = 127.0.0.1
 // 10086
 ^https?://.+/gmccapp/file/image/preloading/preloading\d{17}.jpg - reject
 ^https?://\w{2}.10086.cn/gmccapp/file/image/homepage/adver - reject
+^https?://\w{2}.10086.cn/gmccapp/local/\?sessionid=.+&servicename=GMCCAPP_305_006 - reject
+^https?://\w{2}.10086.cn/gmccapp/serv/\?sessionid=.+&servicename=GMCCAPP_404_003_001_002 - reject
 ^https?://\w{2}.10086.cn/upfile/khd/loadingpage/ - reject
 ^https?://app.10086.cn/group - reject
 ^https?://app.m.zj.chinamobile.com/zjweb/SpAdvert - reject
@@ -6639,8 +6620,9 @@ syria.sy = 127.0.0.1
 
 // ele
 ^https?://elemecdn.com/.+/sitemap - reject
-^https?://fuss10.elemecdn.com/.+/w/640/h/1136 - reject
-^https?://fuss10.elemecdn.com/.+/w/750/h/1334 - reject
+^https?://fuss10.elemecdn.com/.+/w/640/h/\d{3,4} - reject
+^https?://fuss10.elemecdn.com/.+/w/750/h/\d{3,4} - reject
+^https?://fuss10.elemecdn.com/.+\.mp4 - reject
 ^https?://m.elecfans.com/static/js/ad.js - reject
 ^https?://www1.elecfans.com/www/delivery/ - reject
 
@@ -6752,8 +6734,8 @@ syria.sy = 127.0.0.1
 ^https?://api.laifeng.com/v1/start/ads - reject
 
 // Douyin
-^https?://aweme.snssdk.com/aweme/v1/play/\?video_id=.+&line=0&ratio=default - reject
-^https?://aweme.snssdk.com/aweme/v1/screen/ad/ - reject
+^https?://aweme.snssdk.com/api/ad/ - reject
+^https?://.+.pstatp.com/img/ad - reject
 
 // Xiachufang
 ^https?://api.xiachufang.com/v2/ad/ - reject
@@ -6779,6 +6761,9 @@ syria.sy = 127.0.0.1
 ^https?://hm.xiaomi.com/.+/soc/well/list/community - reject
 ^https?://hm.xiaomi.com/discovery/mi/discovery/homepage_ad - reject
 ^https?://hm.xiaomi.com/discovery/mi/discovery/sport_ad - reject
+
+// Mi
+^https?://api.m.mi.com/.+/app/start - reject
 
 // Weico
 ^https?://.+/portal.php\?a=get_ads - reject
@@ -6863,6 +6848,7 @@ syria.sy = 127.0.0.1
 // ttlrs
 ^https?://img.53site.com/Werewolf/AD/ - reject
 ^https?://werewolf.53site.com/Werewolf/.+/getAdvertise.php - reject
+^https?://werewolf.53site.com/Werewolf/.+/getShareVideodb.php - reject
 
 // Apple
 ^https?://a.applovin.com/.+/ad - reject
@@ -6895,8 +6881,6 @@ syria.sy = 127.0.0.1
 // Hupu
 ^https?://i1.hoopchina.com.cn/blogfile/.+_\w{3}x\w{4} - reject
 
-// Jike
-^https?://app.jike.ruguoapp.com/.+/configs/appGet - reject
 
 // Letv
 ^https?://.+/letv-gug/ - reject
@@ -6919,7 +6903,7 @@ syria.sy = 127.0.0.1
 // Fenghuangxiu
 ^https?://api.fengshows.com/api/launchAD - reject
 
-// RR TV
+// RRTV
 ^https?://img.rr.tv/banner/.+.jpg - reject
 
 // Laosiji
@@ -6968,6 +6952,10 @@ syria.sy = 127.0.0.1
 
 // Haoqixin ribao
 ^https?://app3.qdaily.com/app3/boot_advertisements.json - reject
+
+// Fenqile
+^https?://fm.fenqile.com/routev2/other/getfloatAd.json - reject
+^https?://fm.fenqile.com/routev2/other/startImg.json - reject
 
 // Other
 ^https?://[^(apple|10010)]+\.(com|cn)/(a|A)d(s|v)?(/|.js) - reject
