--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -43,7 +43,7 @@ USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet*,DIRECT
 //Siri
-USER-AGENT,AssistantServices*,DIRECT
+USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
@@ -177,7 +177,6 @@ DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
 DOMAIN-SUFFIX,m-78.jp,REJECT
 DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
-DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
 
 // Sohu
 DOMAIN-SUFFIX,adnet.sohu.com,REJECT
@@ -305,6 +304,7 @@ DOMAIN-SUFFIX,i.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,iad.g.163.com,REJECT
 DOMAIN-SUFFIX,iadmat.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,iadmatvideo.nosdn.127.net,REJECT
+DOMAIN-SUFFIX,iadmusicmat.music.126.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
 DOMAIN-SUFFIX,impservice.youdao.com,REJECT
@@ -346,10 +346,6 @@ DOMAIN-SUFFIX,union.youdao.com,REJECT
 DOMAIN-SUFFIX,wanproxy.127.net,REJECT
 DOMAIN-SUFFIX,wr.da.netease.com,REJECT
 DOMAIN-SUFFIX,ydpushserver.youdao.com,REJECT
-
-URL-REGEX,^https?://impservice\..+\.youdao.com,REJECT
-
-
 
 // 10000
 DOMAIN-SUFFIX,114so.cn,REJECT
@@ -522,7 +518,6 @@ DOMAIN-SUFFIX,bar.baidu.com,REJECT
 DOMAIN-SUFFIX,bce.baidu.com,REJECT
 DOMAIN-SUFFIX,bdimg.share.baidu.com,REJECT
 DOMAIN-SUFFIX,bdplus.baidu.com,REJECT
-DOMAIN-SUFFIX,bj.bcebos.com,REJECT
 DOMAIN-SUFFIX,btlaunch.baidu.com,REJECT
 DOMAIN-SUFFIX,c.baidu.com,REJECT
 DOMAIN-SUFFIX,cb.baidu.com,REJECT
@@ -659,9 +654,6 @@ DOMAIN-SUFFIX,znsv.baidu.com,REJECT
 DOMAIN-SUFFIX,zz.bdstatic.com,REJECT
 DOMAIN-SUFFIX,zzy1.quyaoya.com,REJECT
 
-URL-REGEX,^https?://api\d\.tuisong\.baidu\.com,REJECT
-URL-REGEX,^https?://sa\d\.tuisong\.baidu\.com,REJECT
-
 // Book
 DOMAIN-SUFFIX,1uandun.com,REJECT
 DOMAIN-SUFFIX,70e.com,REJECT
@@ -706,8 +698,6 @@ DOMAIN-SUFFIX,xpe.cxaerp.com,REJECT
 DOMAIN-SUFFIX,xtzxmy.com,REJECT
 DOMAIN-SUFFIX,xyrkl.com,REJECT
 DOMAIN-SUFFIX,zhuanfakong.com,REJECT
-
-URL-REGEX,^https?://(e|m)\..+/((uu|oo)\.php.+|\d+\.x?html\?$),REJECT
 
 // Caiyun
 DOMAIN-SUFFIX,ad.caiyunapp.com,REJECT
@@ -881,10 +871,6 @@ DOMAIN-SUFFIX,ebp.renren.com,REJECT
 DOMAIN-SUFFIX,jebe.renren.com,REJECT
 DOMAIN-SUFFIX,jebe.xnimg.cn,REJECT
 
-// Sendanywhere
-URL-REGEX,^https?://notice\.send-anywhere\.com\/banner,REJECT
-URL-REGEX,^https?://\w+\.cloudfront\.net\/banner,REJECT
-
 // Sina
 DOMAIN-SUFFIX,2016.sina.cn,REJECT
 DOMAIN-SUFFIX,ad.sina.com.cn,REJECT
@@ -971,12 +957,6 @@ DOMAIN-SUFFIX,woocall.sina.com.cn,REJECT
 DOMAIN-SUFFIX,zc.biz.weibo.com,REJECT
 DOMAIN-SUFFIX,zymo.mps.weibo.com,REJECT
 
-URL-REGEX,^https?://ad\d\.sina\.com,REJECT
-URL-REGEX,^https?://ad\d\.sina\.com.cn,REJECT
-URL-REGEX,^https?://d\d\.sina\.com\.cn,REJECT
-URL-REGEX,^https?://d\d\.sinaimg\.cn,REJECT
-URL-REGEX,^https?://sax\d\.sina\.com\.cn,REJECT
-
 // Sogou
 DOMAIN-SUFFIX,123.sogou.com,REJECT
 DOMAIN-SUFFIX,adsence.sogou.com,REJECT
@@ -1022,10 +1002,6 @@ DOMAIN-SUFFIX,l.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mtrace.qq.com,REJECT
 DOMAIN-SUFFIX,pingma.qq.com,REJECT
-
-URL-REGEX,^https?://.+\.beacon\.qq\.com,REJECT
-URL-REGEX,^https?://.+\.gdt\.qq\.com,REJECT
-URL-REGEX,^https?://.+\.l\.qq\.com,REJECT
 
 // Tianya
 DOMAIN-SUFFIX,801.tianya.cn,REJECT
@@ -1221,8 +1197,6 @@ DOMAIN-SUFFIX,sys.zhangyue.com,REJECT
 
 // Zhihu
 DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
-
-URL-REGEX,^https?://pic\d\.zhimg\.com\/v2.+,REJECT
 
 // AD Block
 DOMAIN-KEYWORD,admarvel,REJECT
@@ -2218,7 +2192,6 @@ DOMAIN-SUFFIX,biz.gexing.com,REJECT
 DOMAIN-SUFFIX,biz.live.xunlei.com,REJECT
 DOMAIN-SUFFIX,biz37.net,REJECT
 DOMAIN-SUFFIX,bizanti.youwatch.org,REJECT
-DOMAIN-SUFFIX,bj.bcebos.com,REJECT
 DOMAIN-SUFFIX,bjcathay.com,REJECT
 DOMAIN-SUFFIX,bjs.9669.cn,REJECT
 DOMAIN-SUFFIX,bl.wavecdn.de,REJECT
@@ -2594,7 +2567,6 @@ DOMAIN-SUFFIX,data.ads.oppomobile.com,REJECT
 DOMAIN-SUFFIX,data.ad-score.com,REJECT
 DOMAIN-SUFFIX,data.apn.co.nz,REJECT
 DOMAIN-SUFFIX,data.bilibili.com,REJECT
-DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,data.neuroxmedia.com,REJECT
 DOMAIN-SUFFIX,datafastguru.info,REJECT
 DOMAIN-SUFFIX,datouniao.com,REJECT
@@ -2697,8 +2669,6 @@ DOMAIN-SUFFIX,dnvus.com,REJECT
 DOMAIN-SUFFIX,do69ifsly4.me,REJECT
 DOMAIN-SUFFIX,dol.deliver.ifeng.com,REJECT
 DOMAIN-SUFFIX,dolphin.deliver.ifeng.com,REJECT
-DOMAIN-SUFFIX,dongtaiwang.com,REJECT
-DOMAIN-SUFFIX,dongtaiwang.org,REJECT
 DOMAIN-SUFFIX,do-not-tracker.org,REJECT
 DOMAIN-SUFFIX,dontblockme.modaco.com,REJECT
 DOMAIN-SUFFIX,dopa.com,REJECT
@@ -2706,7 +2676,6 @@ DOMAIN-SUFFIX,dot.eporner.com,REJECT
 DOMAIN-SUFFIX,dot2.eporner.com,REJECT
 DOMAIN-SUFFIX,dotmore.com.tw,REJECT
 DOMAIN-SUFFIX,dou777.com,REJECT
-DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,doubleclick.tv002.com,REJECT
 DOMAIN-SUFFIX,doubleverify.com,REJECT
 DOMAIN-SUFFIX,doudao.cn,REJECT
@@ -3172,7 +3141,6 @@ DOMAIN-SUFFIX,i.stat.nearme.com.cn,REJECT
 DOMAIN-SUFFIX,i.syasn.com,REJECT
 DOMAIN-SUFFIX,i.w55c.net,REJECT
 DOMAIN-SUFFIX,i.zhuoyaju.com,REJECT
-DOMAIN-SUFFIX,i1.go2yd.com,REJECT
 DOMAIN-SUFFIX,i1236.net,REJECT
 DOMAIN-SUFFIX,i3818.com,REJECT
 DOMAIN-SUFFIX,i92xue.com,REJECT
@@ -3675,8 +3643,6 @@ DOMAIN-SUFFIX,milk.yesky.com.cn,REJECT
 DOMAIN-SUFFIX,millennialmedia.com,REJECT
 DOMAIN-SUFFIX,millwardbrownacsr.com,REJECT
 DOMAIN-SUFFIX,minesage.com,REJECT
-DOMAIN-SUFFIX,minghui.com,REJECT
-DOMAIN-SUFFIX,minghui.org,REJECT
 DOMAIN-SUFFIX,mingxianshanghang.cn,REJECT
 DOMAIN-SUFFIX,mingysh.com,REJECT
 DOMAIN-SUFFIX,mini.hao123.com,REJECT
@@ -3856,7 +3822,6 @@ DOMAIN-SUFFIX,omtrdc.net,REJECT
 DOMAIN-SUFFIX,on.maxspeedcdn.com,REJECT
 DOMAIN-SUFFIX,onclickads.net,REJECT
 DOMAIN-SUFFIX,one.520319.cn,REJECT
-DOMAIN-SUFFIX,oneapm.com,REJECT
 DOMAIN-SUFFIX,onesoft.im,REJECT
 DOMAIN-SUFFIX,onetad.com,REJECT
 DOMAIN-SUFFIX,onetag-sys.com,REJECT
@@ -3889,6 +3854,7 @@ DOMAIN-SUFFIX,p.szonline.net,REJECT
 DOMAIN-SUFFIX,p.tencentmind.com,REJECT
 DOMAIN-SUFFIX,p0y.cn,REJECT
 DOMAIN-SUFFIX,p1.18zhongyao.com,REJECT
+DOMAIN-SUFFIX,p1.music.126.net,REJECT
 DOMAIN-SUFFIX,p3p.mmstat.com,REJECT
 DOMAIN-SUFFIX,p3tt.com,REJECT
 DOMAIN-SUFFIX,p8u.hinet.net,REJECT
@@ -4141,7 +4107,6 @@ DOMAIN-SUFFIX,revsci.net,REJECT
 DOMAIN-SUFFIX,rhgyg.com,REJECT
 DOMAIN-SUFFIX,richmedia.yimg.com,REJECT
 DOMAIN-SUFFIX,riqu2015.com,REJECT
-DOMAIN-SUFFIX,rl.go2yd.com,REJECT
 DOMAIN-SUFFIX,rlcdn.com,REJECT
 DOMAIN-SUFFIX,rm.ra.icast.cn,REJECT
 DOMAIN-SUFFIX,rmads.eu.msn.com,REJECT
@@ -4183,7 +4148,6 @@ DOMAIN-SUFFIX,s.051352.com,REJECT
 DOMAIN-SUFFIX,s.35kds.com,REJECT
 DOMAIN-SUFFIX,s.6travel.com,REJECT
 DOMAIN-SUFFIX,s.abcache.com,REJECT
-DOMAIN-SUFFIX,s.go2yd.com,REJECT
 DOMAIN-SUFFIX,s.ipinyou.com,REJECT
 DOMAIN-SUFFIX,s.jlminte.com,REJECT
 DOMAIN-SUFFIX,s.jzkelida.com,REJECT
@@ -5081,8 +5045,6 @@ DOMAIN-SUFFIX,zzimg.51.la,REJECT
 DOMAIN-SUFFIX,zzrcz.com,REJECT
 DOMAIN-SUFFIX,zzsx8.com,REJECT
 
-URL-REGEX,^https?://dl\.app\.gtja\.com/.+\d+\.jpg$,REJECT
-
 
 // 传说对决
 USER-AGENT,kgtw*,DIRECT
@@ -5176,22 +5138,8 @@ USER-AGENT,Coinbase*,DIRECT
 USER-AGENT,Instagram*,DIRECT
 USER-AGENT,Resilio Sync*,DIRECT
 USER-AGENT,SoundCloud*,DIRECT
+USER-AGENT,Twitch*,DIRECT
 USER-AGENT,WhatsApp*,DIRECT
-
-// KW
-DOMAIN-KEYWORD,amazon,DIRECT
-DOMAIN-KEYWORD,appledaily,DIRECT
-DOMAIN-KEYWORD,beetalk,DIRECT
-DOMAIN-KEYWORD,blogspot,DIRECT
-DOMAIN-KEYWORD,dropbox,DIRECT
-DOMAIN-KEYWORD,fbcdn,DIRECT
-DOMAIN-KEYWORD,facebook,DIRECT
-DOMAIN-KEYWORD,instagram,DIRECT
-DOMAIN-KEYWORD,spotify,DIRECT
-DOMAIN-KEYWORD,telegram,DIRECT
-DOMAIN-KEYWORD,twitter,DIRECT
-DOMAIN-KEYWORD,twimg,DIRECT
-DOMAIN-KEYWORD,whatsapp,DIRECT
 
 // Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
@@ -5329,6 +5277,7 @@ DOMAIN-SUFFIX,avgle.com,DIRECT
 DOMAIN-SUFFIX,awsstatic.com,DIRECT
 DOMAIN-SUFFIX,azureedge.net,DIRECT
 DOMAIN-SUFFIX,azurewebsites.net,DIRECT
+DOMAIN-SUFFIX,badoo.com,PROXY
 DOMAIN-SUFFIX,bandisoft.com,DIRECT
 DOMAIN-SUFFIX,bbtoystore.com,DIRECT
 DOMAIN-SUFFIX,betvictor.com,DIRECT
@@ -5596,8 +5545,10 @@ DOMAIN-SUFFIX,quoracdn.net,DIRECT
 DOMAIN-SUFFIX,readingtimes.com.tw,DIRECT
 DOMAIN-SUFFIX,readmoo.com,DIRECT
 DOMAIN-SUFFIX,recaptcha.net,DIRECT
+DOMAIN-SUFFIX,redd.it,DIRECT
 DOMAIN-SUFFIX,reddit.com,DIRECT
 DOMAIN-SUFFIX,redditmedia.com,DIRECT
+DOMAIN-SUFFIX,redditstatic.com,DIRECT
 DOMAIN-SUFFIX,reuters.com,DIRECT
 DOMAIN-SUFFIX,rfi.fr,DIRECT
 DOMAIN-SUFFIX,rileyguide.com,DIRECT
@@ -5823,6 +5774,23 @@ DOMAIN-SUFFIX,zalmos.com,DIRECT
 DOMAIN-SUFFIX,zaobao.com.sg,DIRECT
 DOMAIN-SUFFIX,zeutch.com,DIRECT
 DOMAIN-SUFFIX,zynamics.com,DIRECT
+
+// KW
+DOMAIN-KEYWORD,amazon,DIRECT
+DOMAIN-KEYWORD,appledaily,DIRECT
+DOMAIN-KEYWORD,beetalk,DIRECT
+DOMAIN-KEYWORD,blogspot,DIRECT
+DOMAIN-KEYWORD,dropbox,DIRECT
+DOMAIN-KEYWORD,fbcdn,DIRECT
+DOMAIN-KEYWORD,facebook,DIRECT
+DOMAIN-KEYWORD,github,DIRECT
+DOMAIN-KEYWORD,porn,DIRECT
+DOMAIN-KEYWORD,instagram,DIRECT
+DOMAIN-KEYWORD,spotify,DIRECT
+DOMAIN-KEYWORD,telegram,DIRECT
+DOMAIN-KEYWORD,twitter,DIRECT
+DOMAIN-KEYWORD,twimg,DIRECT
+DOMAIN-KEYWORD,whatsapp,DIRECT
 
 // Amazon
 IP-CIDR,13.32.0.0/16,DIRECT,no-resolve
