--- a/config.yml
+++ b/config.yml
@@ -34,28 +34,55 @@ secret: ""
 Proxy:
 - name: "test1"
   type: ss
-  server: xx.xx.com
+  server: cn1.xx.com
+  port: 1111
+  cipher: chacha20-ietf-poly1305
+  password: ABCDEF
+- name: "test2"
+  type: ss
+  server: cn2.xx.com
+  port: 1111
+  cipher: chacha20-ietf-poly1305
+  password: ABCDEF
+- name: "test3"
+  type: ss
+  server: hk1.xx.com
   port: 1111
   cipher: chacha20-ietf-poly1305
   password: ABCDEF
   obfs: http
   obfs-host: wns.windows.com
-- name: "test2"
+- name: "test4"
   type: ss
-  server: xx.xx.com
+  server: hk2.xx.com
+  port: 1111
+  cipher: chacha20-ietf-poly1305
+  password: ABCDEF
+  obfs: tls
+  obfs-host: bing.com
+- name: "test5"
+  type: ss
+  server: us.xx.com
   port: 1111
   cipher: chacha20-ietf-poly1305
   password: ABCDEF
 
 Proxy Group:
-# 按照下方格式写入策略组，其中 Domestic 为回国策略，请将大陆节点填入
+# 按照下方格式写入策略组，其中 Domestic 和 China_media 为回国策略(可以仅代理媒体策略），请将大陆节点填入
 - name: Auto
   type: url-test
   proxies:
-  - "test1"
-  - "test2"
+  - "test3"
+  - "test4"
+  - "test5"
   url: http://captive.apple.com
   interval: "1200"
+- name: China_media
+  type: select
+  proxies:
+  - DIRECT
+  - "test1"
+  - "test2"
 - name: Domestic
   type: select
   proxies:
@@ -67,8 +94,9 @@ Proxy Group:
   proxies:
   - Auto
   - DIRECT
-  - "test1"
-  - "test2"
+  - "test3"
+  - "test4"
+  - "test5"
 
 Rule:
 # Apple
@@ -83,7 +111,45 @@ Rule:
 - DOMAIN-SUFFIX,icloud.com,DIRECT
 - DOMAIN-SUFFIX,icloud-content.com,DIRECT
 
-# Domestic
+# China_media（中国媒体）
+# bilibili
+- DOMAIN-KEYWORD,bilibili,China_media
+- DOMAIN-SUFFIX,acgvideo.com,China_media
+- DOMAIN-SUFFIX,hdslb.com,China_media
+# IQIYI
+- DOMAIN-KEYWORD,qiyi,China_media
+- DOMAIN-SUFFIX,qy.net,China_media
+- IP-CIDR,101.227.0.0/16,China_media
+- IP-CIDR,101.224.0.0/13,China_media
+- IP-CIDR,119.176.0.0/12,China_media
+# letv
+- DOMAIN-SUFFIX,api.mob.app.letv.com,China_media
+# MytvSUPER
+- DOMAIN-KEYWORD,nowtv100,China_media
+- DOMAIN-KEYWORD,rthklive,China_media
+- DOMAIN-SUFFIX,mytvsuper.com,China_media
+- DOMAIN-SUFFIX,tvb.com,China_media
+# NeteaseMusic
+- DOMAIN-SUFFIX,music.126.net,China_media
+- DOMAIN-SUFFIX,music.163.com,China_media
+# QQMusic
+- DOMAIN-SUFFIX,music.qq.com,China_media
+- DOMAIN-SUFFIX,y.qq.com,China_media
+# Tencent Video
+- DOMAIN-SUFFIX,vv.video.qq.com,China_media
+# Youku
+- IP-CIDR,106.11.0.0/16,China_media
+
+# Domestic（中国网站）
+- IP-CIDR,185.188.32.0/24,Domestic
+- IP-CIDR,185.188.33.0/24,Domestic
+- IP-CIDR,185.188.34.0/24,Domestic
+- IP-CIDR,185.188.35.0/24,Domestic
+- IP-CIDR6,2a0b:b580::/48,Domestic
+- IP-CIDR6,2a0b:b581::/48,Domestic
+- IP-CIDR6,2a0b:b582::/48,Domestic
+- IP-CIDR6,2a0b:b583::/48,Domestic
+
 - DOMAIN-SUFFIX,cn,Domestic
 - DOMAIN-KEYWORD,-cn,Domestic
 - DOMAIN-SUFFIX,126.com,Domestic
@@ -125,6 +191,7 @@ Rule:
 - DOMAIN-SUFFIX,g-cores.com,Domestic
 - DOMAIN-SUFFIX,godic.net,Domestic
 - DOMAIN-SUFFIX,gtimg.com,Domestic
+- DOMAIN-SUFFIX,hiwifi.com,Domestic
 - DOMAIN,cdn.hockeyapp.net,Domestic
 - DOMAIN-SUFFIX,hongxiu.com,Domestic
 - DOMAIN-SUFFIX,hxcdn.net,Domestic
@@ -148,7 +215,6 @@ Rule:
 - DOMAIN-SUFFIX,miwifi.com,Domestic
 - DOMAIN-SUFFIX,mob.com,Domestic
 - DOMAIN-SUFFIX,netease.com,Domestic
-- DOMAIN-KEYWORD,officecdn,Domestic
 - DOMAIN-SUFFIX,oschina.net,Domestic
 - DOMAIN-SUFFIX,ppsimg.com,Domestic
 - DOMAIN-SUFFIX,pstatp.com,Domestic
@@ -201,22 +267,6 @@ Rule:
 - DOMAIN-SUFFIX,zhihu.com,Domestic
 - DOMAIN-SUFFIX,zhimg.com,Domestic
 
-# 抗 DNS 污染
-- DOMAIN-KEYWORD,amazon,Proxy
-- DOMAIN-KEYWORD,google,Proxy
-- DOMAIN-KEYWORD,gmail,Proxy
-- DOMAIN-KEYWORD,youtube,Proxy
-- DOMAIN-KEYWORD,facebook,Proxy
-- DOMAIN-SUFFIX,fb.me,Proxy
-- DOMAIN-SUFFIX,fbcdn.net,Proxy
-- DOMAIN-KEYWORD,twitter,Proxy
-- DOMAIN-KEYWORD,instagram,Proxy
-- DOMAIN-KEYWORD,dropbox,Proxy
-- DOMAIN-SUFFIX,twimg.com,Proxy
-- DOMAIN-KEYWORD,blogspot,Proxy
-- DOMAIN-SUFFIX,youtu.be,Proxy
-- DOMAIN-KEYWORD,whatsapp,Proxy
-
 # 常见广告拦截
 - DOMAIN-KEYWORD,admarvel,REJECT
 - DOMAIN-KEYWORD,admaster,REJECT
@@ -241,6 +291,22 @@ Rule:
 - DOMAIN-KEYWORD,usage,REJECT
 - DOMAIN-KEYWORD,wlmonitor,REJECT
 - DOMAIN-KEYWORD,zjtoolbar,REJECT
+
+# 抗 DNS 污染
+- DOMAIN-KEYWORD,amazon,Proxy
+- DOMAIN-KEYWORD,google,Proxy
+- DOMAIN-KEYWORD,gmail,Proxy
+- DOMAIN-KEYWORD,youtube,Proxy
+- DOMAIN-KEYWORD,facebook,Proxy
+- DOMAIN-SUFFIX,fb.me,Proxy
+- DOMAIN-SUFFIX,fbcdn.net,Proxy
+- DOMAIN-KEYWORD,twitter,Proxy
+- DOMAIN-KEYWORD,instagram,Proxy
+- DOMAIN-KEYWORD,dropbox,Proxy
+- DOMAIN-SUFFIX,twimg.com,Proxy
+- DOMAIN-KEYWORD,blogspot,Proxy
+- DOMAIN-SUFFIX,youtu.be,Proxy
+- DOMAIN-KEYWORD,whatsapp,Proxy
 
 # Proxy
 - DOMAIN-SUFFIX,9to5mac.com,Proxy
@@ -405,6 +471,7 @@ Rule:
 - DOMAIN-SUFFIX,nssurge.com,Proxy
 - DOMAIN-SUFFIX,nyt.com,Proxy
 - DOMAIN-SUFFIX,nytimes.com,Proxy
+- DOMAIN-SUFFIX,office.com,Proxy
 - DOMAIN-SUFFIX,office365.com,Proxy
 - DOMAIN-SUFFIX,omnigroup.com,Proxy
 - DOMAIN-SUFFIX,onedrive.com,Proxy
@@ -493,6 +560,7 @@ Rule:
 - DOMAIN-SUFFIX,vultr.com,Proxy
 - DOMAIN-SUFFIX,w.org,Proxy
 - DOMAIN-SUFFIX,w3schools.com,Proxy
+- DOMAIN-SUFFIX,weather.com,Proxy
 - DOMAIN-SUFFIX,webtype.com,Proxy
 - DOMAIN-SUFFIX,wikiwand.com,Proxy
 - DOMAIN-SUFFIX,wikileaks.org,Proxy
