--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,6 @@
-# 2018-11-25 23:40 UTC/GMT +9
-#---------------------------------------------------#
-## 配置文件需要放置在 $HOME/.config/clash/config.yml
-#---------------------------------------------------#
+# 2018年11月6日 02:20 UTC/GMT +9
+
+# 配置文件需要放置在 $HOME/.config/clash/config.yml
 
 # HTTP 代理端口
 port: 8888
